ffigen/LabSoundHelper.h

#define AudioContext void
typedef struct AudioStreamConfig {
    int32_t device_index;
    uint32_t desired_channels;
    float desired_samplerate;
} AudioStreamConfig;
typedef struct AudioDeviceIndex
{
    uint32_t index;
    int valid;
} AudioDeviceIndex;
struct AudioDeviceInfoList labSound_MakeAudioDeviceList();
AudioDeviceIndex labSound_GetDefaultOutputAudioDeviceIndex();
AudioDeviceIndex labSound_GetDefaultInputAudioDeviceIndex();
int labSound_MakeAudioHardwareInputNode(AudioContext* context);
AudioStreamConfig labSound_GetDefaultInputAudioDeviceConfiguration();
AudioStreamConfig labSound_GetDefaultOutputAudioDeviceConfiguration();
////////////
/// PORT ///
////////////

intptr_t InitDartApiDL(void* data);
void registerDecodeAudioSendPort(int sendPort);
void registerAudioSampleOnEndedSendPort(int sendPort);
void registerOfflineRenderCompleteSendPort(int sendPort);
////////////////////
/// AudioContext ///
////////////////////

AudioContext* createRealtimeAudioContext(AudioStreamConfig outputConfig, AudioStreamConfig inputConfig);
AudioContext* createOfflineAudioContext(AudioStreamConfig outputConfig, double recordTimeMilliseconds);
int AudioContext_startOfflineRendering(AudioContext* context);
int AudioContext_makeAudioHardwareInputNode(AudioContext* context);
// AudioContext can pull node(s) at the end of each render quantum even
// when they are not connected to any downstream nodes. These two methods
// are called by the nodes who want to add/remove themselves into/from the
// automatic pull lists.
void AudioContext_addAutomaticPullNode(AudioContext* context, int nodeId);
void AudioContext_removeAutomaticPullNode(AudioContext* context, int nodeId);
// Called right before handlePostRenderTasks() to handle nodes which need to
// be pulled even when they are not connected to anything.
// Only an AudioHardwareDeviceNode should call this.
void AudioContext_processAutomaticPullNodes(AudioContext* context, int framesToProcess);
// Called at the start of each render quantum.
void AudioContext_handlePreRenderTasks(AudioContext* context);
// Called at the end of each render quantum.
void AudioContext_handlePostRenderTasks(AudioContext* context);