ffigen/struct.h

struct AudioDeviceInfoBridge
{
    int index;
    char*  identifier;
    int  identifier_len;
    int num_output_channels;
    int num_input_channels;
    struct FloatArray supported_samplerates;
    float nominal_samplerate;
    int is_default_output;
    int is_default_input;
};
struct AudioDeviceInfoList {
    struct AudioDeviceInfoBridge* audioDeviceList;
    int length;
};