lib/tau_labs_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/tau_labs.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class TauLabsBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  TauLabsBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  TauLabsBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// A very short-lived native function.
  ///
  /// For very short-lived functions, it is fine to call them on the main isolate.
  /// They will block the Dart execution while running the native function, so
  /// only do this for native functions which are guaranteed to be short-lived.
  int sum(int a, int b) {
    return _sum(a, b);
  }

  late final _sumPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>('sum');
  late final _sum = _sumPtr.asFunction<int Function(int, int)>();

  /// A longer lived native function, which occupies the thread calling it.
  ///
  /// Do not call these kind of native functions in the main isolate. They will
  /// block Dart execution. This will cause dropped frames in Flutter applications.
  /// Instead, call these native functions on a separate isolate.
  int sum_long_running(int a, int b) {
    return _sum_long_running(a, b);
  }

  late final _sum_long_runningPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
        'sum_long_running',
      );
  late final _sum_long_running =
      _sum_long_runningPtr.asFunction<int Function(int, int)>();

  AudioDeviceInfoList labSound_MakeAudioDeviceList() {
    return _labSound_MakeAudioDeviceList();
  }

  late final _labSound_MakeAudioDeviceListPtr =
      _lookup<ffi.NativeFunction<AudioDeviceInfoList Function()>>(
        'labSound_MakeAudioDeviceList',
      );
  late final _labSound_MakeAudioDeviceList =
      _labSound_MakeAudioDeviceListPtr
          .asFunction<AudioDeviceInfoList Function()>();

  AudioDeviceIndex labSound_GetDefaultOutputAudioDeviceIndex() {
    return _labSound_GetDefaultOutputAudioDeviceIndex();
  }

  late final _labSound_GetDefaultOutputAudioDeviceIndexPtr =
      _lookup<ffi.NativeFunction<AudioDeviceIndex Function()>>(
        'labSound_GetDefaultOutputAudioDeviceIndex',
      );
  late final _labSound_GetDefaultOutputAudioDeviceIndex =
      _labSound_GetDefaultOutputAudioDeviceIndexPtr
          .asFunction<AudioDeviceIndex Function()>();

  AudioDeviceIndex labSound_GetDefaultInputAudioDeviceIndex() {
    return _labSound_GetDefaultInputAudioDeviceIndex();
  }

  late final _labSound_GetDefaultInputAudioDeviceIndexPtr =
      _lookup<ffi.NativeFunction<AudioDeviceIndex Function()>>(
        'labSound_GetDefaultInputAudioDeviceIndex',
      );
  late final _labSound_GetDefaultInputAudioDeviceIndex =
      _labSound_GetDefaultInputAudioDeviceIndexPtr
          .asFunction<AudioDeviceIndex Function()>();

  int labSound_MakeAudioHardwareInputNode(ffi.Pointer<ffi.Void> context) {
    return _labSound_MakeAudioHardwareInputNode(context);
  }

  late final _labSound_MakeAudioHardwareInputNodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'labSound_MakeAudioHardwareInputNode',
      );
  late final _labSound_MakeAudioHardwareInputNode =
      _labSound_MakeAudioHardwareInputNodePtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  AudioStreamConfig labSound_GetDefaultInputAudioDeviceConfiguration() {
    return _labSound_GetDefaultInputAudioDeviceConfiguration();
  }

  late final _labSound_GetDefaultInputAudioDeviceConfigurationPtr =
      _lookup<ffi.NativeFunction<AudioStreamConfig Function()>>(
        'labSound_GetDefaultInputAudioDeviceConfiguration',
      );
  late final _labSound_GetDefaultInputAudioDeviceConfiguration =
      _labSound_GetDefaultInputAudioDeviceConfigurationPtr
          .asFunction<AudioStreamConfig Function()>();

  AudioStreamConfig labSound_GetDefaultOutputAudioDeviceConfiguration() {
    return _labSound_GetDefaultOutputAudioDeviceConfiguration();
  }

  late final _labSound_GetDefaultOutputAudioDeviceConfigurationPtr =
      _lookup<ffi.NativeFunction<AudioStreamConfig Function()>>(
        'labSound_GetDefaultOutputAudioDeviceConfiguration',
      );
  late final _labSound_GetDefaultOutputAudioDeviceConfiguration =
      _labSound_GetDefaultOutputAudioDeviceConfigurationPtr
          .asFunction<AudioStreamConfig Function()>();

  /// /////////
  /// PORT ///
  /// /////////
  int InitDartApiDL(ffi.Pointer<ffi.Void> data) {
    return _InitDartApiDL(data);
  }

  late final _InitDartApiDLPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>(
        'InitDartApiDL',
      );
  late final _InitDartApiDL =
      _InitDartApiDLPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void registerDecodeAudioSendPort(int sendPort) {
    return _registerDecodeAudioSendPort(sendPort);
  }

  late final _registerDecodeAudioSendPortPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'registerDecodeAudioSendPort',
      );
  late final _registerDecodeAudioSendPort =
      _registerDecodeAudioSendPortPtr.asFunction<void Function(int)>();

  void registerAudioSampleOnEndedSendPort(int sendPort) {
    return _registerAudioSampleOnEndedSendPort(sendPort);
  }

  late final _registerAudioSampleOnEndedSendPortPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'registerAudioSampleOnEndedSendPort',
      );
  late final _registerAudioSampleOnEndedSendPort =
      _registerAudioSampleOnEndedSendPortPtr.asFunction<void Function(int)>();

  void registerOfflineRenderCompleteSendPort(int sendPort) {
    return _registerOfflineRenderCompleteSendPort(sendPort);
  }

  late final _registerOfflineRenderCompleteSendPortPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'registerOfflineRenderCompleteSendPort',
      );
  late final _registerOfflineRenderCompleteSendPort =
      _registerOfflineRenderCompleteSendPortPtr
          .asFunction<void Function(int)>();

  /// /////////////////
  /// AudioContext ///
  /// /////////////////
  ffi.Pointer<ffi.Void> createRealtimeAudioContext(
    AudioStreamConfig outputConfig,
    AudioStreamConfig inputConfig,
  ) {
    return _createRealtimeAudioContext(outputConfig, inputConfig);
  }

  late final _createRealtimeAudioContextPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Void> Function(AudioStreamConfig, AudioStreamConfig)
    >
  >('createRealtimeAudioContext');
  late final _createRealtimeAudioContext =
      _createRealtimeAudioContextPtr
          .asFunction<
            ffi.Pointer<ffi.Void> Function(AudioStreamConfig, AudioStreamConfig)
          >();

  ffi.Pointer<ffi.Void> createOfflineAudioContext(
    AudioStreamConfig outputConfig,
    double recordTimeMilliseconds,
  ) {
    return _createOfflineAudioContext(outputConfig, recordTimeMilliseconds);
  }

  late final _createOfflineAudioContextPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Void> Function(AudioStreamConfig, ffi.Double)
    >
  >('createOfflineAudioContext');
  late final _createOfflineAudioContext =
      _createOfflineAudioContextPtr
          .asFunction<
            ffi.Pointer<ffi.Void> Function(AudioStreamConfig, double)
          >();

  int AudioContext_startOfflineRendering(ffi.Pointer<ffi.Void> context) {
    return _AudioContext_startOfflineRendering(context);
  }

  late final _AudioContext_startOfflineRenderingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'AudioContext_startOfflineRendering',
      );
  late final _AudioContext_startOfflineRendering =
      _AudioContext_startOfflineRenderingPtr.asFunction<
        int Function(ffi.Pointer<ffi.Void>)
      >();

  int AudioContext_makeAudioHardwareInputNode(ffi.Pointer<ffi.Void> context) {
    return _AudioContext_makeAudioHardwareInputNode(context);
  }

  late final _AudioContext_makeAudioHardwareInputNodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'AudioContext_makeAudioHardwareInputNode',
      );
  late final _AudioContext_makeAudioHardwareInputNode =
      _AudioContext_makeAudioHardwareInputNodePtr.asFunction<
        int Function(ffi.Pointer<ffi.Void>)
      >();

  /// AudioContext can pull node(s) at the end of each render quantum even
  /// when they are not connected to any downstream nodes. These two methods
  /// are called by the nodes who want to add/remove themselves into/from the
  /// automatic pull lists.
  void AudioContext_addAutomaticPullNode(
    ffi.Pointer<ffi.Void> context,
    int nodeId,
  ) {
    return _AudioContext_addAutomaticPullNode(context, nodeId);
  }

  late final _AudioContext_addAutomaticPullNodePtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>
  >('AudioContext_addAutomaticPullNode');
  late final _AudioContext_addAutomaticPullNode =
      _AudioContext_addAutomaticPullNodePtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>, int)
      >();

  void AudioContext_removeAutomaticPullNode(
    ffi.Pointer<ffi.Void> context,
    int nodeId,
  ) {
    return _AudioContext_removeAutomaticPullNode(context, nodeId);
  }

  late final _AudioContext_removeAutomaticPullNodePtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>
  >('AudioContext_removeAutomaticPullNode');
  late final _AudioContext_removeAutomaticPullNode =
      _AudioContext_removeAutomaticPullNodePtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>, int)
      >();

  /// Called right before handlePostRenderTasks() to handle nodes which need to
  /// be pulled even when they are not connected to anything.
  /// Only an AudioHardwareDeviceNode should call this.
  void AudioContext_processAutomaticPullNodes(
    ffi.Pointer<ffi.Void> context,
    int framesToProcess,
  ) {
    return _AudioContext_processAutomaticPullNodes(context, framesToProcess);
  }

  late final _AudioContext_processAutomaticPullNodesPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>
  >('AudioContext_processAutomaticPullNodes');
  late final _AudioContext_processAutomaticPullNodes =
      _AudioContext_processAutomaticPullNodesPtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>, int)
      >();

  /// Called at the start of each render quantum.
  void AudioContext_handlePreRenderTasks(ffi.Pointer<ffi.Void> context) {
    return _AudioContext_handlePreRenderTasks(context);
  }

  late final _AudioContext_handlePreRenderTasksPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'AudioContext_handlePreRenderTasks',
      );
  late final _AudioContext_handlePreRenderTasks =
      _AudioContext_handlePreRenderTasksPtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>)
      >();

  /// Called at the end of each render quantum.
  void AudioContext_handlePostRenderTasks(ffi.Pointer<ffi.Void> context) {
    return _AudioContext_handlePostRenderTasks(context);
  }

  late final _AudioContext_handlePostRenderTasksPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'AudioContext_handlePostRenderTasks',
      );
  late final _AudioContext_handlePostRenderTasks =
      _AudioContext_handlePostRenderTasksPtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>)
      >();
